# build-your-own-claude-code

./: .gitignore  .prettierignore  README.md  course-definition.yml
.cursor/: Dockerfile  environment.json
.github/workflows/: test.yml
compiled_starters/cpp/: CMakeLists.txt
compiled_starters/csharp/: CodeCrafters.ClaudeCode.csproj  README.md  codecrafters.yml
compiled_starters/dart/: codecrafters.yml  pubspec.yaml  your_program.sh
compiled_starters/elixir/: README.md  codecrafters.yml  mix.exs
compiled_starters/gleam/: README.md  gleam.toml
compiled_starters/go/: README.md
compiled_starters/haskell/: .gitignore  codecrafters.yml  package.yaml
compiled_starters/java/: pom.xml
dockerfiles/: bun-1.2.Dockerfile  c-23.Dockerfile  cpp-23.Dockerfile  crystal-1.16.Dockerfile  dart-3.11.Dockerfile  dart-3.7.Dockerfile  dotnet-10.0.Dockerfile  dotnet-9.0.Dockerfile  go-1.19.Dockerfile  go-1.25.Dockerfile  haskell-9.8.Dockerfile  julia-1.11.Dockerfile  kotlin-2.2.Dockerfile  nodejs-21.Dockerfile  ocaml-5.4.Dockerfile  odin-2025.7.Dockerfile  php-8.5.Dockerfile  python-3.14.Dockerfile  r-4.4.Dockerfile  scala-3.7.Dockerfile  swift-6.0.Dockerfile  zig-0.15.2.Dockerfile
stage_descriptions/: base-01-yy2.md  base-02-aq1.md  base-03-md6.md  base-04-ff2.md  base-04-oz7.md  base-04-yp5.md  base-05-bp2.md  base-05-ff2.md  base-05-oz7.md  base-06-bp2.md  base-06-oq5.md  base-06-oz7.md  base-07-bp2.md  base-07-ff2.md  base-07-oq5.md  base-08-oq5.md
starter_templates/ocaml/code/: dune  dune-project
starter_templates/ocaml/code/src/: main.ml
(+264 files in other folders)
