(lang dune 3.21)

(name codecrafters_claude_code)

(generate_opam_files true)

(package
 (name codecrafters_claude_code)
 (maintainers "CodeCrafters <hello@codecrafters.io>")
 (authors "CodeCrafters <hello@codecrafters.io>")
 (synopsis "Starter code for the Build your own Claude Code challenge")
 (homepage "https://codecrafters.io")
 (bug_reports
  "https://github.com/codecrafters-io/build-your-own-claude-code/issues")
 (license "MIT")
 (depends
  (dune (>= 3.21))
  (cohttp-lwt-unix (>= 5.0))
  (cohttp-lwt (>= 5.0))
  (lwt (>= 5.0))
  (yojson (>= 2.0))
  tls-lwt
  (odoc :with-doc))
 (allow_empty true)
 (version 0.1))
